log
Tue 18 Apr 2023 04:00:34 AM UTC: 
 tests:  1|8
total_score: 0/70
fcd4955
Tue 18 Apr 2023 04:10:29 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:5: error: ‘new’ undeclared (first use in this function)
   44 |     new->lower_than = lower_than;
      |     ^~~
treemap.c:44:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c9037aa
Tue 18 Apr 2023 04:10:52 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
953586b
Tue 18 Apr 2023 04:11:01 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
1fdaa09
Tue 18 Apr 2023 04:20:39 AM UTC: 
 treemap.c | 44 ++++++++++++++++++++++++--------------------
 1 file changed, 24 insertions(+), 20 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:53:16: error: ‘map’ undeclared (first use in this function)
   53 |             if(map->lower_than(tree->current,key) == 1) tree->current = tree->current->left;
      |                ^~~
treemap.c:53:16: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:54:54: error: expected ‘;’ before ‘}’ token
   54 |             else tree->current = tree->current->right
      |                                                      ^
      |                                                      ;
   55 |         }
      |         ~                                             
Compilation failed
25fb09b
Tue 18 Apr 2023 04:20:45 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:53:16: error: ‘map’ undeclared (first use in this function)
   53 |             if(map->lower_than(tree->current,key) == 1) tree->current = tree->current->left;
      |                ^~~
treemap.c:53:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8018c5f
Tue 18 Apr 2023 04:20:55 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
39c3f52
Tue 18 Apr 2023 04:21:36 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
c3d000f
Tue 18 Apr 2023 04:23:44 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
fc17021
Tue 18 Apr 2023 04:29:49 AM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
2509d74
Tue 18 Apr 2023 04:41:42 AM UTC: 
 treemap.c | 26 ++++++++++++++++++++------
 1 file changed, 20 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:80:22: error: ‘node’ undeclared (first use in this function)
   80 |             parent = node;
      |                      ^~~~
treemap.c:80:22: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:86:75: error: ‘new_node’ undeclared (first use in this function)
   86 |         if (tree->lower_than(parent->pair->key, key) == 0) parent->left = new_node
      |                                                                           ^~~~~~~~
treemap.c:86:83: error: expected ‘;’ before ‘else’
   86 |         if (tree->lower_than(parent->pair->key, key) == 0) parent->left = new_node
      |                                                                                   ^
      |                                                                                   ;
   87 |         else parent->right = new_node;
      |         ~~~~                                                                       
Compilation failed
cffd7bb
Tue 18 Apr 2023 04:42:20 AM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  12|6
total_score: 15/70
b41ed4d
Tue 18 Apr 2023 04:42:51 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
a808388
Tue 18 Apr 2023 04:47:09 AM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  14|5
total_score: 15/70
60967ab
Tue 18 Apr 2023 04:47:27 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  15|4
total_score: 25/70
6405d3e
Tue 18 Apr 2023 05:07:16 AM UTC: 
 treemap.c | 36 ++++++++++++++++++++++++++++++++----
 1 file changed, 32 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:102:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
  102 |   if(node = tree->root){
      |      ^~~~
treemap.c:108:74: error: ‘parent’ undeclared (first use in this function)
  108 |       if(tree->lower_than(node->pair->key,node->parent->pair->key) == 0) parent->left = NULL;
      |                                                                          ^~~~~~
treemap.c:108:74: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
4dbbc8e
Tue 18 Apr 2023 05:07:25 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:108:74: error: ‘parent’ undeclared (first use in this function)
  108 |       if(tree->lower_than(node->pair->key,node->parent->pair->key) == 0) parent->left = NULL;
      |                                                                          ^~~~~~
treemap.c:108:74: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8bbe600
Tue 18 Apr 2023 05:07:51 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
195b2cb
Tue 18 Apr 2023 05:08:20 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
27c1895
Tue 18 Apr 2023 05:08:48 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
871a9a9
Tue 18 Apr 2023 05:09:31 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
636ff42
Tue 18 Apr 2023 05:09:51 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
28be330
Tue 18 Apr 2023 05:14:12 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
30b829f
Tue 18 Apr 2023 05:15:58 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
149a196
Tue 18 Apr 2023 05:16:14 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f01592c
Tue 18 Apr 2023 05:17:10 AM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
d4e8313
Tue 18 Apr 2023 05:18:25 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e0a1e4b
Tue 18 Apr 2023 05:22:43 AM UTC: 
 treemap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  18|3
total_score: 40/70
ff7725f
Tue 18 Apr 2023 05:24:37 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:128:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  128 |     return minimum(tree->root);
      |            ^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
23eba34
Tue 18 Apr 2023 05:25:20 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
6c93356
Tue 18 Apr 2023 05:26:35 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:133:41: error: expected ‘;’ before ‘return’
  133 |     tree->current = tree->current->right
      |                                         ^
      |                                         ;
  134 |     return tree->current->pair;
      |     ~~~~~~                               
treemap.c:135:1: error: control reaches end of non-void function [-Werror=return-type]
  135 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6ea8ba0
Tue 18 Apr 2023 05:26:43 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  21|2
total_score: 50/70
6cfa1bb
Tue 18 Apr 2023 05:30:12 AM UTC: 
 treemap.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  25|1
total_score: 60/70
0f768ce
Tue 18 Apr 2023 05:58:44 AM UTC: 
 treemap.c | 27 +++++++++++++++++++--------
 1 file changed, 19 insertions(+), 8 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:164:48: error: expected ‘;’ before ‘ub_node’
  164 |       else tree->current = tree->current->right
      |                                                ^
      |                                                ;
  165 |       ub_node = tree->current
      |       ~~~~~~~                                   
Compilation failed
6975fb5
Tue 18 Apr 2023 05:58:52 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
ee89bda
